syntax = "proto3";


option csharp_namespace = "GrpcExample";

package greet;

service ExampleService_Pro {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

message ExampleRequest {
    int32  pageIndex = 1;
    int32  pageSize = 2;
    bool isDescending = 3;
  
}


// The response message containing the greetings.
message ExampleResponse {
  string message = 1;
}